-Add indent functions used when text is aligned to left

2000-10-25-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can see text when text is align to right or middle, and show a red triangle
when text is too large and you align to right or left.

2000-10-27-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Add Validity function

2000-10-29-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Bug fix

2000-11-01-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add some financial functions, patch given by  Jonathan Singer <jsinger@genome.wi.mit.edu>
thanks

2000-11-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can apply parameters at a entire column/row

2000-11-07-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide zero value, it's an option (kspread_dlg_preference -> hide zero)
-Now you can convert first letter in upper case (kspread_dlg_preference-> "convert ...")
-You can used special paste on a column/row

2000-11-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Add new functions : OCT2BIN ,OCT2HEX,OCT2DEC ; HEX2BIN ,HEX2OCT,HEX2DEC ; BIN2HEX ,BIN2OCT,BIN2DEC
renamed DECBIN -> DEC2BIN  , DECHEx -> DEC2HEX , DECOCT -> DEC2OCT but there is against
compatibility with old function you can used against DECHEX, DECOCT, DECBIN

2000-11-09-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Fix bug when we copy/paste cell and row/column has layout parameters
-Bug fix

2000-11-11-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread_dlg_layout works when you select an entire column/row(s)